syntax = "proto3";

option go_package = "pb/";

package account;

import "common.proto";

service AccountService {
  rpc FindOneByUID (UID) returns (Account) {}
  rpc CreateAccount(CreateAccountInput) returns (common.AffectedRows) {}
}



message UID{
  string UID = 1;
}

message Account{
  int64 ID = 1;
  string UID = 2;
  string Name = 3;
  optional string Bio = 4;
}

message CreateAccountInput {
  string UID = 1;
  string Name = 2;
  optional string Bio = 3;
}



//////////////////

//service TweetService {
//  rpc CreateTweet(CreateTweetInput) returns (AffectedRows) {}
//}

//message CreateTweetInput{
//  string Content = 1;
//  int64  AccountID = 2;
//  repeated CreateCategoryInput Categories = 3;
//}

//message CreateCategoryInput {
//  string name = 1;
//}
